syntax = "proto3";

package mypb;

option go_package = "proto/mypb";

// 导入api注释依赖
import "google/api/annotations.proto";

// 定义服务
service BookService {
    // 创建书籍
    rpc CreateBook (CreateBookRequest) returns (CreateBookResponse) {
        option (google.api.http) = {
            post: "/v1/books"
            body: "*"  // 表示请求体映射到CreateBookRequest所有字段
        };
    };


    // 获取书籍
    rpc GetBook(GetBookRequest) returns (GetBookResponse) {
        option (google.api.http) = {
            get: "/v1/books/{id}"
        };
    };

    // 删除书籍
    rpc DelBook(DeleteBookRequest) returns (DeleteBookResponse) {
        option (google.api.http) = {
            post: "/v1/books/{id}"
            body: "*"
        };
    };

}

message Book {
    // int64 会自动转换为string 进行返回
    int32 id = 1;
    string name = 2;

}

// 定义接收参数
message CreateBookRequest {
    string name = 1;
}


message CreateBookResponse {
    string code = 1;
    string message = 2;
    Book data = 3;
}


message GetBookRequest {
    int32 id = 1;
}


message GetBookResponse {
    string code = 1;
    string message = 2;
    Book data = 3;
}


message DeleteBookRequest {
    int32 id = 1;
}

message DeleteBookResponse {
    string code = 1;
    string message = 2;
    Book data = 3;
}


